
Fix search-and-replace error in Term.pm.
----------------------------------------------------------------------
Wed Feb  8 14:35:48 2012                        Michael Jennings (mej)

Don't wipe existing object data in set().  Only do that in init().

Split test config file into 2 pieces so we can test loading
configuration from multiple files.
----------------------------------------------------------------------
Thu Feb  9 16:06:27 2012                        Michael Jennings (mej)

Add a unit test to make sure keys found in multiple files are +='d
properly.

Alter Config::load() API so that multiple files can be specified in a
single load() invocation.  If alterations to the search path are
required, they must be done using set_path() before load() is invoked,
which means you won't be able to pass the filenames directly to
new().  (This was determined to be a reasonable trade-off.)  load()
now returns the number of files successfully parsed.

NOTE:  Still need to fix a bug in the caching mechanism.  Previously,
the += operator would only append to values found in the file being
parsed.  Now it will add to the existing value found in the object,
but the *entire* result winds up in the cache, not just what was in
the current file.  Shouldn't be an issue in the time it'll take to
complete the work.
----------------------------------------------------------------------
Fri Feb 10 11:12:04 2012                        Michael Jennings (mej)

Added a unit test to flag the "bug" I mentioned in yesterday's commit,
and it turns out that it doesn't adversely affect any desired/correct
behavior.  So rather than do a big revamp, we've decided to leave the
unit tests in place and will maintain the current (technically wrong
but behaviorally correct) code until such time as the unit tests fail
or other problems arise which require us to revisit.
----------------------------------------------------------------------