@@ -1,11 +1,12 @@
 # This can/should be 600 if you don't want anybody else to see it and thus
-# be able to communicate with the datastore.
+# not be able to communicate with the datastore.
+# NOTE: The httpd process must be able to read database.conf for provisioning
 dist_confDATA_INSTALL = ${INSTALL} -m 644
 
 
 confdir = $(sysconfdir)/warewulf/
 
-dist_conf_DATA = database.conf
+dist_conf_DATA = database.conf wwfunctions
 
 MAINTAINERCLEANFILES = Makefile.in
 
