@@ -37,6 +37,7 @@ rm -rf $RPM_BUILD_ROOT
 %doc AUTHORS COPYING ChangeLog INSTALL NEWS README TODO LICENSE
 %dir %{_sysconfdir}/warewulf
 %config(noreplace) %{_sysconfdir}/warewulf/database.conf
+%config(noreplace) %{_sysconfdir}/warewulf/wwfunctions
 %{_bindir}/*
 %{_datadir}/warewulf/
 %{perl_vendorlib}/*
