@@ -1,5 +1,7 @@
 confdir = $(sysconfdir)/warewulf/
 
+SUBDIRS = wwmkchroot
+
 dist_conf_DATA = vnfs.conf bootstrap.conf
 
 MAINTAINERCLEANFILES = Makefile.in
