@@ -1,0 +1,6 @@
+confdir = $(sysconfdir)/warewulf/wwmkchroot
+
+dist_conf_DATA = wwmkchroot.tmpl rhel debian ubuntu
+
+MAINTAINERCLEANFILES = Makefile.in
+
