@@ -1,0 +1,17 @@
+# -*-Shell-script-*-
+# 
+# wwmkchroot template file
+
+DESC="Description of chroot"
+
+PKGLIST="Packages to Install in build_vnfs"
+
+build_vnfs
+{
+    # What do we do to build the VNFS?
+    #
+    # Basically, how do we go about creating a chroot environment?
+    echo "I'm a template...";
+}
+
+# vim:filetype=sh:syntax=sh:expandtab:ts=4:sw=4:
