@@ -14,3 +14,10 @@ Fri Aug 12 17:37:43 2011                        Michael Jennings (mej)
 
 Adjust version due to incompatible changes.
 ----------------------------------------------------------------------
+Fri Feb 24 10:27:44 2012                            Jason Stover (jms)
+
+Added bin/wwmkchroot and etc/wwmkchroot/. An initial start at breaking
+the chroot creation down into bite sized chunks. wwmkchroot requires
+the wwfunctions file in the warewulf-common package for the vnfs_*
+functions defined within.
+----------------------------------------------------------------------
